--- a/app/src/main/res/layout/activity_book_appointment.xml
+++ b/app/src/main/res/layout/activity_book_appointment.xml
@@ -129,7 +129,7 @@
         app:layout_constraintVertical_bias="0.316" />
 
     <Button
-        android:id="@+id/buttonCheckoutCart"
+        android:id="@+id/buttonCheckoutBMCart"
         android:layout_width="346dp"
         android:layout_height="51dp"
         android:background="@drawable/btn_bg"
