--- a/app/src/main/res/layout/activity_health_articles.xml
+++ b/app/src/main/res/layout/activity_health_articles.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/back1"
-    tools:context=".DoctorDetailsActivity">
-
+    tools:context=".HealthArticlesActivity">
 
     <TextView
         android:id="@+id/textViewDDName"
@@ -26,20 +25,21 @@
         android:id="@+id/textViewBMDcartTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Default Text"
-        android:textColor="#ffff"
-        android:textSize="20sp"
+        android:text="Health Articles"
+        android:textColor="#ffff66"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textViewDDName"
-        app:layout_constraintVertical_bias="0.01999998"/>
+        app:layout_constraintVertical_bias="0.01999998" />
 
     <ListView
         android:id="@+id/listViewBMCart"
-        android:layout_width="350dp"
-        android:layout_height="700dp"
+        android:layout_width="322dp"
+        android:layout_height="478dp"
         android:layout_margin="10dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
@@ -54,11 +54,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:text="BACK"
+        android:text="GO TO CART"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/listViewBMCart" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
