--- a/app/src/main/res/layout/activity_lab_test_book.xml
+++ b/app/src/main/res/layout/activity_lab_test_book.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".RegisterActivity">
+    tools:context=".model.LabTestBookActivity">
 
     <EditText
-        android:id="@+id/editTextAppAddress"
+        android:id="@+id/editTextBMBAddress"
         android:layout_width="343dp"
         android:layout_height="51dp"
         android:layout_marginTop="28dp"
@@ -16,7 +16,7 @@
         android:drawableLeft="@drawable/ic_baseline_email_24"
         android:drawablePadding="10dp"
         android:ems="10"
-        android:hint="Email "
+        android:hint="Address"
         android:inputType="textWebEmailAddress"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
@@ -27,11 +27,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextAppFullName"
+        app:layout_constraintTop_toBottomOf="@+id/editTextBMBFullName"
         app:layout_constraintVertical_bias="0.008" />
 
     <EditText
-        android:id="@+id/editTextAppNumber"
+        android:id="@+id/editTextBMBPinCode"
         android:layout_width="346dp"
         android:layout_height="49dp"
         android:layout_marginTop="28dp"
@@ -40,8 +40,8 @@
         android:drawableLeft="@drawable/ic_baseline_security_24"
         android:drawablePadding="10dp"
         android:ems="10"
-        android:hint="Password"
-        android:inputType="textPassword"
+        android:hint="Pin Code"
+        android:inputType="number"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
         android:paddingRight="10dp"
@@ -52,11 +52,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextAppAddress"
+        app:layout_constraintTop_toBottomOf="@+id/editTextBMBAddress"
         app:layout_constraintVertical_bias="0.0" />
 
     <EditText
-        android:id="@+id/editTextAppFees"
+        android:id="@+id/editTextBMBContactNumber"
         android:layout_width="346dp"
         android:layout_height="49dp"
         android:layout_marginTop="28dp"
@@ -65,8 +65,8 @@
         android:drawableLeft="@drawable/ic_baseline_security_24"
         android:drawablePadding="10dp"
         android:ems="10"
-        android:hint="Confirm Password"
-        android:inputType="textPassword"
+        android:hint="Contact Number"
+        android:inputType="number"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
         android:paddingRight="10dp"
@@ -77,7 +77,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextAppNumber"
+        app:layout_constraintTop_toBottomOf="@+id/editTextBMBPinCode"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
@@ -99,9 +99,9 @@
         android:id="@+id/textViewAppTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Registration"
-        android:textColor="@color/white"
-        android:textSize="34sp"
+        android:text="Please Fill All Details for Booking"
+        android:textColor="#ffff66"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -111,14 +111,14 @@
         app:layout_constraintVertical_bias="0.084" />
 
     <EditText
-        android:id="@+id/editTextAppFullName"
+        android:id="@+id/editTextBMBFullName"
         android:layout_width="343dp"
         android:layout_height="51dp"
         android:background="@drawable/input_bg"
         android:drawableLeft="@drawable/ic_baseline_person_24"
         android:drawablePadding="10dp"
         android:ems="10"
-        android:hint="User Name"
+        android:hint="Full Name"
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
@@ -134,29 +134,20 @@
         app:layout_constraintVertical_bias="0.073" />
 
     <Button
-        android:id="@+id/buttonCheckoutBMCart"
+        android:id="@+id/buttonBMBBOOK"
         android:layout_width="339dp"
         android:layout_height="54dp"
         android:layout_marginBottom="120dp"
         android:background="@drawable/btn_bg"
-        android:text="REGISTER"
+        android:text="BOOK"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextAppFees"
+        app:layout_constraintTop_toBottomOf="@+id/editTextBMBContactNumber"
         app:layout_constraintVertical_bias="1.0" />
 
-    <TextView
-        android:id="@+id/textViewAccountUser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Already have an Account ? Click Here"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonCheckoutBMCart" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
