--- a/app/src/main/res/layout/activity_doctor_details.xml
+++ b/app/src/main/res/layout/activity_doctor_details.xml
@@ -23,7 +23,7 @@
         app:layout_constraintVertical_bias="0.045" />
 
     <TextView
-        android:id="@+id/textViewBMDcartTitle"
+        android:id="@+id/textViewHATitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Default Text"
@@ -37,7 +37,7 @@
         app:layout_constraintVertical_bias="0.01999998"/>
 
     <ListView
-        android:id="@+id/listViewBMCart"
+        android:id="@+id/listViewHA"
         android:layout_width="350dp"
         android:layout_height="700dp"
         android:layout_margin="10dp"
@@ -47,10 +47,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textViewBMDcartTitle" />
+        app:layout_constraintTop_toBottomOf="@id/textViewHATitle" />
 
     <Button
-        android:id="@+id/buttonLTGoToCart"
+        android:id="@+id/buttonHADBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -58,7 +58,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/listViewBMCart" />
+        app:layout_constraintTop_toBottomOf="@+id/listViewHA" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
