--- a/app/src/main/res/layout/activity_health_articles.xml
+++ b/app/src/main/res/layout/activity_health_articles.xml
@@ -22,7 +22,7 @@
         app:layout_constraintVertical_bias="0.045" />
 
     <TextView
-        android:id="@+id/textViewBMDcartTitle"
+        android:id="@+id/textViewHATitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Health Articles"
@@ -37,27 +37,29 @@
         app:layout_constraintVertical_bias="0.01999998" />
 
     <ListView
-        android:id="@+id/listViewBMCart"
-        android:layout_width="322dp"
-        android:layout_height="478dp"
+        android:id="@+id/listViewHA"
+        android:layout_width="316dp"
+        android:layout_height="562dp"
         android:layout_margin="10dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textViewBMDcartTitle" />
+        app:layout_constraintTop_toBottomOf="@id/textViewHATitle"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/buttonLTGoToCart"
+        android:id="@+id/buttonHADBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:text="GO TO CART"
+        android:text="BACK"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/listViewBMCart" />
+        app:layout_constraintTop_toBottomOf="@+id/listViewHA" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
