--- a/app/src/main/res/layout/activity_lab_test_details.xml
+++ b/app/src/main/res/layout/activity_lab_test_details.xml
@@ -1,27 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/back2"
     tools:context=".LabTestActivity">
-
-    <TextView
-        android:id="@+id/textViewBMDTitle4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Deliver to Benagaluru"
-        android:textColor="#ffff"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textViewDDName"
-        app:layout_constraintVertical_bias="0.1" />
-
     <TextView
         android:id="@+id/textViewDDName"
         android:layout_width="wrap_content"
@@ -36,63 +21,42 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.045" />
 
-
     <TextView
-        android:id="@+id/textViewBMDcartTitle"
+        android:id="@+id/textViewHATitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Lab Test and Packages"
-        android:textColor="#ffff66"
-        android:textSize="24sp"
+        android:text="Default Text"
+        android:textColor="#ffff"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textViewDDName"
-        app:layout_constraintVertical_bias="0.225" />
+        app:layout_constraintVertical_bias="0.01999998"/>
 
-    <Button
-        android:id="@+id/buttonBMDGoToCart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:text="GO TO CART"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TextviewBMDMultiLine"
-        app:layout_constraintVertical_bias="0.794" />
-
-    <EditText
-
-
-        android:id="@+id/TextviewBMDMultiLine"
-        android:layout_width="217dp"
-        android:layout_height="321dp"
+    <ListView
+        android:id="@+id/listViewHA"
+        android:layout_width="339dp"
+        android:layout_height="514dp"
         android:layout_margin="10dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:text="hi"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textViewBMDcartTitle"
-        app:layout_constraintVertical_bias="0.101" />
+        app:layout_constraintTop_toBottomOf="@id/textViewHATitle"
+        app:layout_constraintVertical_bias="0.306" />
 
-    <TextView
-        android:id="@+id/textViewBMDTotalCost"
+    <Button
+        android:id="@+id/buttonHADBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="19dp"
-        android:text="TextView"
-        android:textColor="#ffff66"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonBMDGoToCart"
+        android:layout_marginTop="4dp"
+        android:text="BACK"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TextviewBMDMultiLine"
-        app:layout_constraintVertical_bias="0.2" />
-
+        app:layout_constraintTop_toBottomOf="@+id/listViewHA" />
 </androidx.constraintlayout.widget.ConstraintLayout>
