--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -51,7 +51,7 @@
         android:id="@+id/recview"
         android:layout_width="393dp"
         android:layout_height="539dp"
-
+        android:backgroundTint="#E3CB73"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:background="#C6A3A3"
